--- a/.github/workflows/docs-latest-public.yaml
+++ b/.github/workflows/docs-latest-public.yaml
@@ -2,6 +2,10 @@ name: "[internal] Docs build and deploy to GitHub pages on main impl"
 
 on:
   workflow_call:
+    inputs:
+      version:
+        required: true
+        type: string
 
 concurrency:
   # Note that people may spam the post-commit pipeline on their branch, and
@@ -21,7 +25,7 @@ jobs:
         arch: [grayskull]
     env:
       TT_METAL_ENV: ${{ vars.TT_METAL_ENV }}
-      DOCS_VERSION: latest
+      DOCS_VERSION: ${{ inputs.version }}
       ARCH_NAME: ${{ matrix.arch }}
       LOGURU_LEVEL: INFO
       LD_LIBRARY_PATH: ${{ github.workspace }}/build/lib
@@ -65,14 +69,16 @@ jobs:
       - name: Prepare artifact - create root index
         run: |
           touch gh_pages/index.html
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3.0.1
-        with:
-          path: "gh_pages"
       - name: Deploy to GitHub Pages
-        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: JamesIves/github-pages-deploy-action@v4
         id: deployment
         uses: actions/deploy-pages@v4.0.4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          target_branch: gh-pages
+          target_folder: $DOCS_VERSION
+          publish_dir: ./gh_pages/$DOCS_VERSION
+          force_orphan: false
       - name: Delete artifact if deployment failed
         # When the deployment API call fails, the artifacts are not cleaned up correctly
         # and the next attempt (!) run will cause an error.
