--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -12,10 +12,18 @@ on:
         type: boolean
         default: false
         description: "Build with tracy enabled"
-      os:
+      distro:
         required: false
         type: string
-        default: "ubuntu-20.04-amd64"
+        default: "ubuntu"
+      version:
+        required: false
+        type: string
+        default: "20.04"
+      architecture:
+        required: false
+        type: string
+        default: "amd64"
       toolchain:
         required: false
         type: string
@@ -47,10 +55,18 @@ on:
         type: boolean
         default: false
         description: "Build with tracy enabled"
-      os:
+      distro:
         required: false
         type: string
-        default: "ubuntu-20.04-amd64"
+        default: "ubuntu"
+      version:
+        required: false
+        type: string
+        default: "20.04"
+      architecture:
+        required: false
+        type: string
+        default: "amd64"
 
 
 jobs:
@@ -58,15 +74,18 @@ jobs:
     uses: ./.github/workflows/build-docker-artifact.yaml
     secrets: inherit
     with:
-      os: ${{ inputs.os }}
+      distro: ${{ inputs.distro }}
+      version: ${{ inputs.version }}
+      architecture: ${{ inputs.architecture }}
 
   build-artifact:
-    name: "🛠️ Build ${{ inputs.build-type }} ${{ inputs.os }}"
+    name: "🛠️ Build ${{ inputs.build-type }} ${{ inputs.distro }} ${{ inputs.version }}"
     needs: build-docker-image
     timeout-minutes: 30
     env:
       SILENT: 0
       VERBOSE: 1
+      IMAGE_PARAMS: "${{ inputs.distro }}-${{ inputs.version }}-${{ inputs.architecture }}"
     runs-on:
       - build
       - in-service
@@ -95,7 +114,7 @@ jobs:
         id: generate-docker-tag
         uses: ./.github/actions/generate-docker-tag
         with:
-          image: tt-metalium/${{ inputs.os }}
+          image: tt-metalium/${{ env.IMAGE_PARAMS }}
       - name: Docker login
         uses: docker/login-action@v3
         with:
