LightMetal - Initial Host API + Device Capture infra/library and unit tests (#17039)
 - This is round 5, builds upon previous 4 merges for LightMetal that brought
   flatbuffer cmake/infra, begin/end APIs, LoadTrace() API, flatbuffer/schema
   serialization/deserialization

 - This adds light-metal Capture support for and instruments with LIGHT_METAL_TRACE_FUNCTION_CALL()
   and LIGHT_METAL_TRACE_FUNCTION_ENTRY() to many popular (not exuahstive) APIs used by unit tests.
   The former TRACE_FUNCTION_ENTRY() is more recent, used to protect against host APIs recursively
   calling other host APIs (only trace top most level). Two macros not always called back-to-back.

 - Support Capture/Replay of the following ~14 host APIs

   EnqueueTrace(), ReplayTrace(), ReleaseTrace()
   CreateBuffer(), EnqueueWriteBuffer(), EnqueueReadBuffer(), DeallocateBuffer
   CreateKernel(), CreateCircularBuffer()
   SetRuntimeArgs(uint32) SetRuntimeArgs(Kernel,RuntimeArgs)
   CreateProgram(), EnqueueProgram()
   Finish()

 - During capture, complex objects like Programs, Kernels, Buffers, CBHandle are assigned
   unique global_id, and referred to by their global_id in capture when used by functions

 - When "Metal Trace" is enabled, don't capture EnqueueProgram(), instead
   inject ReplayTrace(), would be used alongside LoadTrace()

 - Can be optionally disabled at compile time using build_metal.sh --disable-light-metal-trace
   which will set C++ define TT_ENABLE_LIGHT_METAL_TRACE=0 (trace functions become NOP)
   Set TT_ENABLE_LIGHT_METAL_TRACE as project cmake option default ON and adjust usage

 - New Verif APIs LightMetalCompareToCapture() / LightMetalCompareToGolden().
   Put them in lightmetal_capture_utils.hpp instead of host_api.hpp since they are purely
   used at capture time, and not worthy enough to be inside host_api.h since just for verif

 - Test fixture runs capture-only right now, will automatically run binary once replay
   support is merged next.

--- a/tt_metal/CMakeLists.txt
+++ b/tt_metal/CMakeLists.txt
@@ -33,6 +33,7 @@ target_link_libraries(
         HAL::grayskull
         HAL::wormhole
         HAL::blackhole
+        FlatBuffers::FlatBuffers
 )
 
 target_precompile_headers(
