--- a/.github/workflows/build-wrapper.yaml
+++ b/.github/workflows/build-wrapper.yaml
@@ -42,7 +42,7 @@ jobs:
             publish-artifact: false
             skip-tt-train: true
     with:
-      os: ${{ matrix.config.version }}
+      version: ${{ matrix.config.version }}
       toolchain: ${{ matrix.config.toolchain }}
       build-type: ${{ matrix.config.build-type }}
       publish-artifact: ${{ matrix.config.publish-artifact }}
