--- a/.github/workflows/publish-release-image.yaml
+++ b/.github/workflows/publish-release-image.yaml
@@ -55,7 +55,7 @@ jobs:
           tags: ${{ env.TAG_NAME }}
           context: .
           file: dockerfile/Dockerfile
-          target: release
+          target: dev
   smoke-test-docker-image:
     needs: create-docker-release-image
     strategy:
