--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -122,6 +122,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 FROM base AS release
 
+RUN mkdir -p /etc && \
+    echo "[global]\nextra-index-url = https://download.pytorch.org/whl/cpu" > /etc/pip.conf
+
 ARG WHEEL_FILENAME
 ADD $WHEEL_FILENAME $WHEEL_FILENAME
 RUN pip3 install $WHEEL_FILENAME
