--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,6 +239,11 @@ else()
     add_compile_definitions(TT_ENABLE_LIGHT_METAL_TRACE=0)
 endif()
 
+include(GNUInstallDirs)
+# GNUInstallDirs takes PROJECT_DIR verbatim, but directories should always be lowercase
+string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)
+string(REPLACE ${PROJECT_NAME} ${PROJECT_NAME_LOWER} CMAKE_INSTALL_DOCDIR ${CMAKE_INSTALL_DOCDIR})
+
 if(ENABLE_CODE_TIMERS)
     add_compile_definitions(TT_ENABLE_CODE_TIMERS)
 endif()
@@ -262,7 +267,6 @@ endif()
 # For top level install: cmake --build build --target install  or  make/ninja install -C build
 ############################################################################################################################
 # Install for build artifacts that will upload build/lib
-include(GNUInstallDirs)
 
 install(
     TARGETS
@@ -271,7 +275,7 @@ install(
         DESTINATION ${CMAKE_INSTALL_LIBDIR}
     LIBRARY
         DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        COMPONENT dev
+        COMPONENT tar
 )
 install(
     TARGETS
@@ -280,7 +284,7 @@ install(
         DESTINATION ${CMAKE_INSTALL_LIBDIR}
     LIBRARY
         DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        COMPONENT dev
+        COMPONENT tar
 )
 install(
     TARGETS
@@ -289,7 +293,7 @@ install(
         DESTINATION ${CMAKE_INSTALL_LIBDIR}
     LIBRARY
         DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        COMPONENT dev
+        COMPONENT tar
 )
 if(WITH_PYTHON_BINDINGS)
     # Install .so into src files for pybinds implementation
@@ -302,6 +306,15 @@ if(WITH_PYTHON_BINDINGS)
             tt_pybinds
     )
 endif()
+
+# FIXME(17578): figure out what bits we actually need to ship and omit the rest
+install(
+    DIRECTORY
+        runtime
+    DESTINATION ${CMAKE_INSTALL_LIBEXECDIR}/tt-metalium
+    USE_SOURCE_PERMISSIONS
+    COMPONENT jit-build
+)
 
 # Custom clean target for `built` folder for when new kernel changes are pulled
 add_custom_target(
