--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -174,7 +174,7 @@ jobs:
       - name: Upload distribution as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: eager-dist-${{ inputs.os }}-any
+          name: eager-dist-${{ inputs.distro }}-${{ inputs.version }}-any
           path: dist/
       - name: Publish Ccache summary
         run: |
