#15246: Add sweeps for isclose, isclose sharded, ldexp sharded, log… (#17300)
### Ticket
[Link to Github
Issue](https://github.com/tenstorrent/tt-metal/issues/11512)

### Problem description
We need to increase sweep test coverage of our ops.

### What's changed
Added sweep tests for multiple ops

### Pass rates for new sweeps:
sweeps/eltwise/binary/rpow/rpow.py: 3 fail, 381 pass (99%)
sweeps/eltwise/binary/rpow/rpow_sharded.py: 87 fail, 297 pass (77%)
sweeps/eltwise/binary/ldexp/ldexp_sharded.py: 640 fail, 128 pass (15%)
sweeps/eltwise/binary/logaddexp/logaddexp_sharded.py: 940 fail, 212 pass
(18%)
sweeps/eltwise/binary/logaddexp2/logaddexp2_sharded.py: 1139 fail, 13
pass (1%)
sweeps/eltwise/binary/isclose/isclose.py: 3 fail, 765 pass (99%)
sweeps/eltwise/binary/isclose/isclose_sharded.py: 169 fail, 599 pass
(77%)
sweeps/eltwise/binary_backward/ldexp_bw/ldexp_bw_sharded.py: 84 fail,
300 pass (78%)
sweeps/eltwise/binary_backward/logaddexp_bw/logaddexp_bw_sharded.py: 84
fail, 300 pass (78%)
sweeps/eltwise/binary_backward/logaddexp2_bw/logaddexp2_bw_sharded.py:
84 fail, 300 pass (78%)
sweeps/eltwise/binary_bw/sub_bw/sub_bw_sharded.py: 768 fail, 0 pass (0%)
sweeps/eltwise/unary_bw/sub_bw/sub_bw.py: 0 fail, 768 pass (100%) 
sweeps/eltwise/unary_bw/sub_bw/sub_bw_sharded.py: 768 fail, 0 pass (0%)
sweeps/eltwise/binary_bw/atan2/atan2.py: 768 fail, 0 pass (0%) 
sweeps/eltwise/binary_bw/atan2/atan2_sharded.py: 768 fail, 0 pass (0%) 
sweeps/eltwise/binary/polyval/polyval_sharded.py: 174 fail, 594 pass
(77%)

### Checklist
- [X] Post commit CI passes
(https://github.com/tenstorrent/tt-metal/actions/runs/13074500921)
- [X] Sweep tests pass

--- a/.github/workflows/ttnn-run-sweeps.yaml
+++ b/.github/workflows/ttnn-run-sweeps.yaml
@@ -227,6 +227,8 @@ on:
           - eltwise.unary_backward.rsqrt_bw.rsqrt_bw
           - eltwise.unary_backward.rsqrt_bw.rsqrt_bw_sharded
           - eltwise.unary_backward.sigmoid_bw.sigmoid_bw
+          - eltwise.unary_backward.sub_bw.sub_bw
+          - eltwise.unary_backward.sub_bw.sub_bw_sharded
           - eltwise.unary_backward.tan_bw.tan_bw
           - eltwise.unary_backward.tan_bw.tan_bw_sharded
           - eltwise.unary_backward.trunc_bw.trunc_bw
@@ -319,6 +321,8 @@ on:
           - eltwise.binary.add.add_different_memory_configs
           - eltwise.binary.add.add_forge
           - eltwise.binary.add.add_llama
+          - eltwise.binary.atan2.atan2
+          - eltwise.binary.atan2.atan2_sharded
           - eltwise.unary.gtz.gtz
           - eltwise.unary.ltz.ltz
           - eltwise.unary.gez.gez
@@ -365,12 +369,15 @@ on:
           - eltwise.binary.logical_and.logical_and_forge
           - eltwise.binary.logical_and.logical_and_sharded
           - eltwise.binary.polyval.polyval
+          - eltwise.binary.polyval.polyval_sharded
           - eltwise.binary.remainder.remainder
           - eltwise.binary.remainder.remainder_scalar_pytorch2
           - eltwise.binary.remainder.remainder_forge
           - eltwise.binary.remainder.remainder_unary
           - eltwise.binary.remainder.remainder_unary_sharded
           - eltwise.binary.remainder.remainder_shape
+          - eltwise.binary.rpow.rpow
+          - eltwise.binary.rpow.rpow_sharded
           - eltwise.binary.squared_difference.squared_difference
           - eltwise.binary.squared_difference_output.squared_difference_output
           - eltwise.binary.scatter.scatter_forge
@@ -388,24 +395,33 @@ on:
           - eltwise.binary.floor_divide.floor_divide_pytorch2
           - eltwise.binary.floor_divide.floor_divide
           - eltwise.binary.logaddexp.logaddexp
+          - eltwise.binary.logaddexp.logaddexp_sharded
           - eltwise.binary.logaddexp2.logaddexp2
+          - eltwise.binary.logaddexp2.logaddexp2_sharded
           - eltwise.binary.ldexp.ldexp
+          - eltwise.binary.ldexp.ldexp_sharded
           - eltwise.binary.lt.lt_tensor_pytorch2
           - eltwise.binary.lt.lt_scalar_pytorch2
           - eltwise.binary.lt.lt_forge
           - eltwise.binary.ne.ne_scalar_pytorch2
           - eltwise.binary.ne.ne_forge
+          - eltwise.binary.isclose.isclose
+          - eltwise.binary.isclose.isclose_sharded
           - eltwise.binary.hypot.hypot
           - eltwise.binary.xlogy.xlogy
           - eltwise.binary_backward.ldexp_bw.ldexp_bw
-          - eltwise.binary_backward.logaddexp_bw
-          - eltwise.binary_backward.logaddexp2_bw
+          - eltwise.binary_backward.ldexp_bw.ldexp_bw_sharded
+          - eltwise.binary_backward.logaddexp_bw.logaddexp_bw
+          - eltwise.binary_backward.logaddexp_bw.logaddexp_bw_sharded
+          - eltwise.binary_backward.logaddexp2_bw.logaddexp2_bw
+          - eltwise.binary_backward.logaddexp2_bw.logaddexp2_bw_sharded
           - eltwise.binary_backward.addalpha_bw.addalpha_bw
           - eltwise.binary_backward.subalpha_bw.subalpha_bw
           - eltwise.binary_backward.xlogy_bw.xlogy_bw
           - eltwise.binary_backward.hypot_bw.hypot_bw
           - eltwise.binary_backward.add_bw.add_bw
           - eltwise.binary_backward.sub_bw.sub_bw
+          - eltwise.binary_backward.sub_bw.sub_bw_sharded
           - eltwise.binary_backward.mul_bw.mul_bw
           - eltwise.binary_backward.div_bw.div_bw
           - eltwise.binary_backward.fmod_bw.fmod_bw
