Tag Docker images with sha1 (#17516)
### Ticket
#17464

### Problem description
Our current tagging of Docker images has a few problems:
1. Not versioned - we may pick up the wrong image
2. May be regenerated needlessly
3. Wastes gh api calls, which are limited
4. Unable to be used at the job scope
(more details in the ticket)

### What's changed
* Docker images are tagged according to the SHA1 of the inputs.
* Determination of whether a new image needs to be rebuilt is now done
on a Cloud image and consumes only 8-10s as opposed to the previous
20-40s, not to mention the wait time for a docker-build runner to become
available.
* Identification of whether a new image must be rebuilt is done without
any GH API calls. Only a shallow clone of the repo is required.
* The job produces `outputs` for the image tags such that downstream
jobs may reference it and run within a container at the job scope.

### Checklist
- [x] [Post commit CI
passes](https://github.com/tenstorrent/tt-metal/actions/runs/13148557130)
- [x] [Python Wheel Release Image
succeeds](https://github.com/tenstorrent/tt-metal/actions/runs/13148270334)

--- a/.github/workflows/publish-release-image-wrapper.yaml
+++ b/.github/workflows/publish-release-image-wrapper.yaml
@@ -18,9 +18,10 @@ jobs:
       os: ${{ matrix.os }}
       from-precompiled: true
   publish-release-image:
-    needs: build-wheels
+    needs: [ build-wheels, build-artifact ]
     uses: ./.github/workflows/publish-release-image.yaml
     secrets: inherit
     with:
+      base-image: ${{ needs.build-artifact.outputs.ci-build-docker-image }}
       version: dev-${GITHUB_REF_NAME//\//-}
       is_major_version: false
