--- a/.github/workflows/build-artifact.yaml
+++ b/.github/workflows/build-artifact.yaml
@@ -42,6 +42,13 @@ on:
         required: false
         type: boolean
         default: false
+    outputs:
+      ci-build-docker-image:
+        description: "Docker tag for the CI Build Docker image for building TT-Metalium et al"
+        value: ${{ jobs.build-docker-image.outputs.ci-build-tag }}
+      #ci-test-docker-image:
+      #  description: "Docker tag for the CI Test Docker image for testing TT-Metalium et al"
+      #  value: ${{ jobs.build-docker-image.outputs.ci-test-tag }}
 
 
   workflow_dispatch:
@@ -115,11 +122,6 @@ jobs:
       - name: Update submodules
         run: |
           git submodule update --init --recursive
-      - name: Generate docker tag
-        id: generate-docker-tag
-        uses: ./.github/actions/generate-docker-tag
-        with:
-          image: tt-metalium/${{ env.IMAGE_PARAMS }}
       - name: Docker login
         uses: docker/login-action@v3
         with:
@@ -127,11 +129,11 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Pull docker image
-        run: docker pull ${{ env.TT_METAL_DOCKER_IMAGE_TAG }}
+        run: docker pull ${{ needs.build-docker-image.outputs.ci-build-tag }}
       - name: Build tt-metal and libs
         uses: tenstorrent/docker-run-action@v5
         with:
-          image: ${{ env.TT_METAL_DOCKER_IMAGE_TAG }}
+          image: ${{ needs.build-docker-image.outputs.ci-build-tag }}
           options: |
             --rm
             --tmpfs /tmp
