--- a/.github/workflows/publish-release-image.yaml
+++ b/.github/workflows/publish-release-image.yaml
@@ -58,7 +58,8 @@ jobs:
             BASE_IMAGE=${{ inputs.base-image }}
           tags: ${{ env.TAG_NAME }}
           context: .
-          file: dockerfile/release.Dockerfile
+          file: dockerfile/Dockerfile
+          target: release
   smoke-test-docker-image:
     needs: create-docker-release-image
     strategy:
@@ -92,6 +93,8 @@ jobs:
           docker_image: ghcr.io/${{ github.repository }}/tt-metalium-${{ matrix.os }}-amd64-release:${{ inputs.version }}
           docker_password: ${{ secrets.GITHUB_TOKEN }}
           run_args: |
+            pip install pytest
+            export PATH="$(pwd)/.local/bin:$PATH"
             ${{ matrix.test_group.cmd }}
   tag-docker-image-as-latest:
     needs: [smoke-test-docker-image, create-docker-release-image]
