--- a/.github/workflows/blackhole-post-commit.yaml
+++ b/.github/workflows/blackhole-post-commit.yaml
@@ -47,6 +47,7 @@ jobs:
     secrets: inherit
     with:
       build-type: ${{ inputs.build-type || 'Release' }}
+      build-wheel: true
       version: "22.04"
   build-artifact-profiler:
     uses: ./.github/workflows/build-artifact.yaml
@@ -55,12 +56,6 @@ jobs:
       build-type: ${{ inputs.build-type || 'Release' }}
       tracy: true
       version: "20.04"
-  build-wheels:
-    needs: build-artifact
-    uses: ./.github/workflows/_build-wheels-impl.yaml
-    with:
-      os: "ubuntu-22.04"
-      from-precompiled: true
   run-profiler-regression:
     needs: build-artifact-profiler
     uses: ./.github/workflows/run-profiler-regression.yaml
@@ -84,7 +79,7 @@ jobs:
       timeout: 30
       os: "ubuntu-22.04"
   fd-unit-tests:
-    needs: build-wheels
+    needs: build-artifact
     uses: ./.github/workflows/fast-dispatch-build-and-unit-tests.yaml
     secrets: inherit
     with:
