Use a hardcoded name because GHA doesn't evaluate variables when it skips the job
This is super ugly and is 99% of our runs.

--- a/.github/workflows/build-docker-artifact.yaml
+++ b/.github/workflows/build-docker-artifact.yaml
@@ -91,7 +91,7 @@ jobs:
 
 
   build-docker-image:
-    name: "🐳️ Build ${{ inputs.distro }} ${{inputs.version }} image"
+    name: "🐳️ Build image"
     needs: check-docker-images
     if: needs.check-docker-images.outputs.ci-build-exists != 'true'
     timeout-minutes: 30
