Uplift SmallVector and ShapeBase to re-use within Metal

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -22,8 +22,13 @@ CPMAddPackage(
         "BOOST_INCLUDE_LIBRARIES core\\\;container\\\;smart_ptr\\\;interprocess"
 )
 
-add_library(span INTERFACE)
-target_link_libraries(span INTERFACE Boost::core)
+add_library(boost INTERFACE)
+target_link_libraries(
+    boost
+    INTERFACE
+        Boost::core
+        Boost::container
+)
 
 ############################################################################################################################
 # yaml-cpp
