--- a/tt_metal/common/CMakeLists.txt
+++ b/tt_metal/common/CMakeLists.txt
@@ -4,6 +4,7 @@ set(COMMON_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/core_descriptor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/metal_soc_descriptor.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/shape2d.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/shape_base.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/tt_backend_api_types.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/utils.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/work_split.cpp
@@ -19,7 +20,7 @@ target_link_libraries(
         nlohmann_json::nlohmann_json
         magic_enum
         fmt::fmt-header-only
-        span
+        boost
         Metalium::Metal::STL
         umd::Firmware
         umd::device
